ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
spec:
  ingressClassName: nginx
  rules:
    - host: n8n.rsaf.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
  tls:
    - hosts:
        - n8n.rsaf.me
      secretName: n8n-tls
